--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ window.onload = calculatePrices;
 <body>
 
 <!-- Dropdowns for user input -->
-Mida embarcació:
+Selecciona la mida de l'embarcació:
 <select id="boatSize" onchange="calculatePrices()" class="form-select" aria-label="Small select example">
   <option selected value="< 6 MTS">&lt; 6 MTS</option>
   <option value="6<8 MTS">6&lt;8 MTS</option>
@@ -164,7 +164,7 @@ Mida embarcació:
   <option value=">15 MTS">&gt; 15 MTS</option>
 </select>
 
-Dates ús boia:
+Selecciona quan utilitzaras la boia:
 <select id="buoyService" onchange="calculatePrices()" class="form-select" aria-label="Small select example">
   <option selected value="1 Maig a 15 de Setembre">1 Maig a 15 de Setembre</option>
   <option value="1 Juny a 15 Setembre">1 Juny a 15 Setembre</option>
@@ -172,7 +172,7 @@ Dates ús boia:
   <option value="1 Maig a 30 Setembre">1 Maig a 30 Setembre</option>
 </select>
 
-Dates servei taxi:
+Selecciona en quines dates faras servir el taxi zodiac:
 <select id="taxiService" onchange="calculatePrices()" class="form-select" aria-label="Small select example">
   <option selected value="1 Juny a 15 Setembre">1 Juny a 15 Setembre</option>
   <option value="1 Maig a 15 de Setembre">1 Maig a 15 de Setembre</option>
