--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ window.onload = calculatePrices;
 
 <!-- Dropdowns for user input -->
 Selecciona la mida de l'embarcació:
-<select id="boatSize" onchange="calculatePrices()" class="form-select" aria-label="Small select example">
+<select id="boatSize" onchange="calculatePrices()" class="form-select --bs-tertiary-color" aria-label="Small select example">
   <option selected value="< 6 MTS">&lt; 6 MTS</option>
   <option value="6<8 MTS">6&lt;8 MTS</option>
   <option value="8<10 MTS">8&lt;10 MTS</option>
@@ -165,7 +165,7 @@ Selecciona la mida de l'embarcació:
 </select>
 
 Selecciona quan utilitzaras la boia:
-<select id="buoyService" onchange="calculatePrices()" class="form-select" aria-label="Small select example">
+<select id="buoyService" onchange="calculatePrices()" class="form-select --bs-tertiary-color" aria-label="Small select example">
   <option selected value="1 Maig a 15 de Setembre">1 Maig a 15 de Setembre</option>
   <option value="1 Juny a 15 Setembre">1 Juny a 15 Setembre</option>
   <option value="1 Juny a 30 Setembre">1 Juny a 30 Setembre</option>
@@ -173,7 +173,7 @@ Selecciona quan utilitzaras la boia:
 </select>
 
 Selecciona en quines dates faras servir el taxi zodiac:
-<select id="taxiService" onchange="calculatePrices()" class="form-select" aria-label="Small select example">
+<select id="taxiService" onchange="calculatePrices()" class="form-select --bs-tertiary-color" aria-label="Small select example">
   <option selected value="1 Juny a 15 Setembre">1 Juny a 15 Setembre</option>
   <option value="1 Maig a 15 de Setembre">1 Maig a 15 de Setembre</option>
   <option value="1 Juny a 30 Setembre">1 Juny a 30 Setembre</option>
