--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ Selecciona en quines dates faras servir el taxi zodiac:
   <option value="1 Maig a 30 Setembre">1 Maig a 30 Setembre</option>
 </select>
 
+PREUS ACTUALITZATS:
 <!-- Table to display the prices -->
 <table class="table" id="priceTable">
   <thead>
