--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ function formatProviderId(provider) {
 
 <div class="row my-4">
   <div class="col-12">
-    <h2 class="text-center mt-5 mb-3">Planol situació concessió</h2>
+    <h2 class="text-center mt-5 mb-3">Plànol situació concessió</h2>
   </div>
 </div>
 <img src="planolConcessionaries.jpg" class="img-fluid" alt="...">
