--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ window.onload = calculatePrices;
 </div>
 <div class="row my-1">
   <div class="col-12">
-    <h6 class="text-center">by AUUECAD</h6>
+    <h6 class="text-center">by <a href="https://www.aueecad.org">AUUECAD</a></h6>
   </div>
 </div>
 <div class="row my-4">
