--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ window.onload = calculatePrices;
   <div class="row my-4">
     <div class="col-12">
       <h4 class="text-center">AUEECAD - Associació d'Usuaris d'Embarcacions d'Esbarjo de Cadaqués </h4>
-      <p class="text-left">[*] Equest servei és a titol informatiu, en cap cas AUEECAD es fa responsables de la correcció de la informació mostrada. Us recomanem verifiqueu sempre el resultat amb la concessionaria abans de contractar el servei.<p>
+      <p class="text-left">[*] El servei d'aquesta pàgina és a titol informatiu. En cap cas AUEECAD es fa responsable de la correcció de la informació mostrada. Us recomanem verifiqueu sempre el resultat amb <strong>la concessionaria que escolliu</strong> abans de contractar el servei.<p>
     </div>
   </div>
 </div>
@@ -297,6 +297,4 @@ window.onload = calculatePrices;
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-
-
 </html>
