--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@ window.onload = calculatePrices;
 <body>
 
 <div class="container">
-  <div class="row my-4">
+  <div class="row mt-4">
     <div class="col-12">
-      <h2 class="text-center">CALCULADORA PREUS BOIA CADAQUÉS</h2>
+      <h2 class="text-center">CALCULADORA Preus Boia a Cadaqués</h2>
     </div>
   </div>
-  <div class="row my-1">
+  <div class="row mt-2">
     <div class="col-12">
       <h6 class="text-center">by <a href="https://www.aueecad.org">AUUECAD</a></h6>
     </div>
@@ -297,4 +297,6 @@ window.onload = calculatePrices;
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
+
 </html>
