--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function googleTranslateElementInit() {
   </div>
   <div class="row mt-2">
     <div class="col-12">
-      <h6 class="text-center">by <a href="https://www.aueecad.org">AUUECAD</a></h6>
+      <h6 class="text-center">by <a href="https://www.aueecad.org">AUEECAD</a></h6>
     </div>
   </div>
   <div class="row my-4">
