--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ function googleTranslateElementInit() {
           <td id="mesDeMarTaxiPrice">-</td>
         </tr>
         <tr>
-          <td class="fw-bold">Mésdemar  (Pantalà Portlligat)</td>
+          <td class="fw-bold">Mésdemar (Pantalà Portlligat)<br><small class="text-body-secondary">(Només de 1 de Juny a 30 de setembre)</small></td>
           <td id="mesDeMarPontonTotalPrice" class="fw-bold">-</td>
           <td>=</td>
           <td id="mesDeMarPontonMooringPrice">-</td>
