Updated Mesdemar ponton prices

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function importMooringPrices() {
       [Season.SEASON_POST]: [0, 0, 0, 0, 0, 0, 0, 0]
     },
     'MesDeMarPonton': {
-      [Season.SEASON_MID]: [1195, 2295, 2995, 0, 0, 0, 0],
+      [Season.SEASON_MID]: [1195, 1990, 2995, 0, 0, 0, 0],
       [Season.SEASON_PRE]: [0, 0, 0, 0, 0, 0, 0, 0],
       [Season.SEASON_POST]: [0, 0, 0, 0, 0, 0, 0, 0]
     }
@@ -196,7 +196,7 @@ function googleTranslateElementInit() {
   </div>
   <div class="row mt-2">
     <div class="col-12">
-      <h6 class="text-center">by <a href="https://www.aueecad.org">AUEECAD</a></h6>
+      <h6 class="text-center">by <a href="https://www.aueecad.org">AUEECAD</a> - Última actualització: 2 d'abril 2024</h6>
     </div>
   </div>
   <div class="row my-4">
